# lodgify-mcp-server

./: .env.example  .gitignore  0.25.0  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAC_CONFIG_FIX.md  MAC_SETUP_GUIDE.md  MAC_UV_PATH_FIX.md  MILESTONES.md  QUICK_FIX_UVX_ERROR.md  README.md  RELEASE_CHECKLIST.md  SECURITY_REVIEW.md  SIMPLIFICATION_SUMMARY.md  claude_desktop_config_example.json  claude_desktop_config_local.json  claude_desktop_config_mac.json  claude_desktop_config_test.json  docker-compose.yml  entrypoint.py  entrypoint_backup.py  entrypoint_fixed.py  github_issue_comment.md  github_issues_analysis.md  llms.txt  lodgify_server.py  main.py  mcp.json  pyproject.toml
.github/workflows/: docker.yml  publish.yml  test.yml
examples/: claude_desktop_config_mac.json  claude_desktop_config_windows.json
issues/: issue1-tests-for-occupancy-summary.md  issue2-docs-for-occupancy-summary.md  issue3-refactor-occupancy-return-statements.md  issue4-conventional-commit-message.md  issue5-precommit-checks.md
tests/: test_entrypoint.py
tests/unit/: test_lodgify_server.py
