[project]
name = "lodgify-mcp-server"
version = "0.2.0"
description = "A Model Context Protocol server for interacting with the Lodgify vacation rental API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Shane", email = "shane@shanephall.com"}
]
keywords = ["mcp", "lodgify", "vacation-rental", "api", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
lodgify-mcp-server = "lodgify_server:main"

[project.urls]
Homepage = "https://github.com/fast-transients/lodgify-mcp-server"
Repository = "https://github.com/fast-transients/lodgify-mcp-server"
Issues = "https://github.com/fast-transients/lodgify-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["lodgify_server.py", "entrypoint.py", "mcp.json"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PL"]
ignore = ["E501", "PLR0913"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
